--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,8 +1,9 @@
 artifacts_root: artifacts
 
+
 data_ingestion:
   root_dir: artifacts/data_ingestion
-  source_URL: https://raw.githubusercontent.com/G-O-T-W/datasets/main/samsum-dataset.zip
+  source_URL: https://github.com/entbappy/Branching-tutorial/raw/master/summarizer-data.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
 
