--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 transformers
 transformers[sentencepiece]
-datasets
 sacrebleu
 rouge-score
 py7zr
@@ -13,6 +12,7 @@ torch
 notebook
 boto3
 mypy-boto3-s3
+datasets==2.21.0
 python-box==6.0.2
 ensure==1.0.2
 fastapi==0.78.0
